Revert "Panes: fix extra margin (#756)"
This reverts commit 79614790eaa20fc45fb0248a657a629200ff4e7b.

--- a/src/widgets/_panes.scss
+++ b/src/widgets/_panes.scss
@@ -12,11 +12,13 @@ paned.horizontal > separator {
         background-image:
             linear-gradient(
                 to right,
-                #{'@menu_separator'} 2px,
+                #{'@menu_separator'} 1px,
+                rgba(white, 0.01) 1px,
+                rgba(white, 0.01) 2px,
                 transparent 2px
             );
     }
     // This creates the invisible resize handle
-    margin-right: rem(-9px);
+    margin-right: rem(-7px);
     min-width: rem(8px);
 }
